# PlaNet-revisited

./: .env.example  .gitignore  LICENSE  Makefile  README.md  cloud_storage.py  env_wrapper.py  experience_replay.py  main.py  metrics.pt  metrics.py  play.py  pyproject.toml  utils.py
conf/: config.yaml
models/: encoder.py  observation_model.py  planner.py  reward_model.py  rssm.py
scripts/: train_vastai.py  train_vastai.sh
