[project]
name = "planet-revisited"
version = "0.1.0"
description = "PlaNet-revisited: A cleaner reimplementation of PlaNet"
requires-python = ">=3.9"
dependencies = [
    "gymnasium>=1.1.1",
    "numpy<2",
    "opencv-python",
    "torch",
    "torchvision",
    "tqdm",
    "hydra-core>=1.3",
    "pygame>=2.6.1",
]

[dependency-groups]
dev = []
