[project]
name = "planet-revisited"
version = "0.1.0"
description = "PlaNet-revisited: A cleaner reimplementation of PlaNet"
requires-python = ">=3.9"
dependencies = [
    "gymnasium>=1.1.1",
    "dm-control>=1.0.0",
    "mujoco>=2.1.5,<3.0.0",
    "numpy<2",
    "opencv-python",
    "torch",
    "torchvision",
    "tqdm",
    "hydra-core>=1.3",
    "pygame>=2.6.1",
    "matplotlib>=3.9.4",
]

[dependency-groups]
dev = []
