[project]
name = "planet-revisited"
version = "0.1.0"
description = "PlaNet-revisited: A cleaner reimplementation of PlaNet"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.1.1",
    "dm-control>=1.0.20",
    "mujoco>=3.8.1,<3.9.0",
    "numpy<2",
    "opencv-python",
    "torch",
    "torchvision",
    "tqdm",
    "hydra-core>=1.3",
    "pygame>=2.6.1",
    "matplotlib>=3.9.4",
    "boto3",
]

[dependency-groups]
dev = []
vastai = ["vastai", "typer>=0.12", "questionary>=2.0"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]

[tool.black]
line-length = 120

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
